...
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="10dp"
            tools:text="Preheat the oven to 350F. Butter a 9 inch deep dish pie pan" />

         <Button
             android:id="@+id/playStepVideo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/play_video_for_this_step"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
